@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19950422
+MANIFEST for ded, version t19950704
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
